config/policies/validating-admission-policy-binding-fields.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: bind-fma-immutable-fields
spec:
  policyName: fma-immutable-fields
  matchResources:
    resources:
      - apiGroups: [""]
        apiVersions: ["v1"]
        kinds: ["Pod"]
        operations: ["UPDATE"]
  validationActions:
    - Deny
