config/policies/validating-admission-policy-bindings-serverReqPod.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: bind-fma-bound-serverreqpod
spec:
  policyName: fma-bound-serverreqpod
  matchResources:
    resources:
      - apiGroups: [""]
        apiVersions: ["v1"]
        kinds: ["Pod"]
        operations: ["UPDATE"]
  validationActions:
    - Deny
